--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>builder</module>
         <module>singleton</module>
         <module>factory-method</module>
+        <module>abstract-factory</module>
+        <module>prototype</module>
     </modules>
 
     <dependencies>
