--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>factory-method</module>
         <module>abstract-factory</module>
         <module>prototype</module>
+        <module>adapter</module>
+        <module>bridge</module>
+        <module>composite</module>
     </modules>
 
     <dependencies>
