--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <module>bridge</module>
         <module>composite</module>
         <module>decorator</module>
+        <module>facade</module>
+        <module>flyweight</module>
+        <module>proxy</module>
     </modules>
 
     <dependencies>
