--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>facade</module>
         <module>flyweight</module>
         <module>proxy</module>
+        <module>chain-of-responsibility</module>
+        <module>command</module>
     </modules>
 
     <dependencies>
