--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>chain-of-responsibility</module>
         <module>command</module>
         <module>interpreter</module>
+        <module>iterator</module>
+        <module>mediator</module>
     </modules>
 
     <dependencies>
