--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>iterator</module>
         <module>mediator</module>
         <module>memento</module>
+        <module>observer</module>
+        <module>state</module>
     </modules>
 
     <dependencies>
