--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <module>observer</module>
         <module>state</module>
         <module>strategy</module>
+        <module>template-method</module>
+        <module>visitor</module>
     </modules>
 
     <dependencies>
